--- a/index.ipynb
+++ b/index.ipynb
@@ -1072,7 +1072,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    for m in m_values:\n",
-    "        y_hat = list(map(lambda x: m))"
+    "        y_hat = list(map(lambda x: m*x + b, x_values))"
    ]
   },
   {
