--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1071,7 +1071,8 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss_values = "
+    "    for m in m_values:\n",
+    "        y_hat = list(map(lambda x: m*x + b, x_values))"
    ]
   },
   {
