--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss_values = list(map(lambda m: residual_sum_squares(x_values, y_values, m, b)))"
+    "    rss_values = list(map(lambda m: residual_sum_squares(x_values, y_values, m, b), m_values))"
    ]
   },
   {
