--- a/index.ipynb
+++ b/index.ipynb
@@ -3230,7 +3230,8 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    output = []\n",
-    "    for step in 1:steps"
+    "    for step in 1:steps:\n",
+    "            "
    ]
   },
   {
