--- a/index.ipynb
+++ b/index.ipynb
@@ -3231,7 +3231,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    output = []\n",
     "    for step in 1:steps:\n",
-    "            "
+    "            output.append"
    ]
   },
   {
