Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3231,7 +3231,8 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    output = []\n",
     "    for step in 1:steps:\n",
-    "            output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope_at(x_values, y_values, m, b)})"
+    "            output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope_at(x_values, y_values, m, b)})\n",
+    "            "
    ]
   },
   {
