--- a/index.ipynb
+++ b/index.ipynb
@@ -3232,7 +3232,7 @@
     "    output = []\n",
     "    for step in 1:steps:\n",
     "            output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope_at(x_values, y_values, m, b)})\n",
-    "            m = updated"
+    "            m = updated_m"
    ]
   },
   {
