--- a/index.ipynb
+++ b/index.ipynb
@@ -3230,7 +3230,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    output = []\n",
-    "    m\n",
+    "    m = current_m\n",
     "    for step in 1:steps:\n",
     "            output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope_at(x_values, y_values, m, b)})\n",
     "            m = updated_m(m, learning_rate, )"
