--- a/index.ipynb
+++ b/index.ipynb
@@ -3233,7 +3233,7 @@
     "    m = current_m\n",
     "    for step in 1:steps:\n",
     "            output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope_at(x_values, y_values, m, b)})\n",
-    "            m = updated_m(m, learning_rate, slope_at(x_values, y_values, m)"
+    "            m = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b)"
    ]
   },
   {
