--- a/index.ipynb
+++ b/index.ipynb
@@ -3234,7 +3234,7 @@
     "    for step in 1:steps:\n",
     "            output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope_at(x_values, y_values, m, b)})\n",
     "            m = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b))\n",
-    "    "
+    "    return output"
    ]
   },
   {
