--- a/index.ipynb
+++ b/index.ipynb
@@ -3240,7 +3240,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    output = []\n",
     "    m = current_m\n",
-    "    for step in list(range()) :\n",
+    "    for step in list(range(steps)):\n",
     "            output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope_at(x_values, y_values, m, b)})\n",
     "            m = updated_m(m, learning_rate, slope_at(x_values, y_values, m, b))\n",
     "    return output"
