--- a/index.ipynb
+++ b/index.ipynb
@@ -3234,7 +3234,7 @@
     "    for step in list(range(steps)):\n",
     "        slope = slope_at(x_values, y_values, m, b)\n",
     "        output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope})\n",
-    "        m = updated_m(m, learning_rate, slope)\n",
+    "        m = updated_m(output_step_m, learning_rate, slope)\n",
     "    return output"
    ]
   },
