--- a/index.ipynb
+++ b/index.ipynb
@@ -3235,7 +3235,10 @@
     "#         slope = slope_at(x_values, y_values, m, b)\n",
     "#         output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope})\n",
     "#         m = updated_m(output[step]m, learning_rate, slope)\n",
-    "#     return output"
+    "#     return output\n",
+    "\n",
+    "steps = 12\n",
+    "for step in list()"
    ]
   },
   {
