--- a/index.ipynb
+++ b/index.ipynb
@@ -3253,7 +3253,7 @@
     "#     for step in list(range(steps)):\n",
     "#         slope = slope_at(x_values, y_values, m, b)\n",
     "#         output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope})\n",
-    "#         m = updated_m(output[step]m, learning_rate, slope)\n",
+    "#         m = updated_m(output[step]['m'], learning_rate, slope)\n",
     "#     return output\n",
     "\n"
    ]
