--- a/index.ipynb
+++ b/index.ipynb
@@ -3224,7 +3224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3234,7 +3234,7 @@
     "    for step in list(range(steps)):\n",
     "        slope = slope_at(x_values, y_values, m, b)\n",
     "        output.append({'m': m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope})\n",
-    "        m = updated_m(output[step]['m'], learning_rate, output[step]['slope'])\n",
+    "#         m = updated_m(output[step]['m'], learning_rate, output[step]['slope'])\n",
     "    return output\n",
     "\n"
    ]
