--- a/index.ipynb
+++ b/index.ipynb
@@ -3233,7 +3233,7 @@
     "    new_m = current_m\n",
     "    for step in list(range(steps)):\n",
     "        slope = slope_at(x_values, y_values, m, b)\n",
-    "        output.append({'m': new_m, 'rss': residual_sum_squares(x_values, y_values, m,b), 'slope':slope})\n",
+    "        output.append({'m': new_m, 'rss': residual_sum_squares(x_values, y_values, new_m,b), 'slope':slope})\n",
     "        new_m = updated_m(output[step]['new_m'], learning_rate, output[step]['slope'])\n",
     "    return output\n",
     "\n"
