--- a/index.ipynb
+++ b/index.ipynb
@@ -3235,7 +3235,7 @@
     "    for step in list(range(steps)):\n",
     "        slope = slope_at(x_values, y_values, new_m, b)\n",
     "        output.append({'m': new_m, 'rss': residual_sum_squares(x_values, y_values, new_m,b), 'slope':slope})\n",
-    "        ncur_m = updated_m(output[step]['m'], rate, output[step]['slope'])\n",
+    "        current_m = updated_m(output[step]['m'], rate, output[step]['slope'])\n",
     "    return output\n",
     "\n"
    ]
