--- a/index.ipynb
+++ b/index.ipynb
@@ -3231,7 +3231,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    output = []\n",
     "    for step in list(range(steps)):\n",
-    "        slope = slope_at(x_values, y_values, new_m, b)\n",
+    "        current_slope = slope_at(x_values, y_values, new_m, b)\n",
     "        output.append({'m': new_m, 'rss': residual_sum_squares(x_values, y_values, new_m,b), 'slope':slope})\n",
     "        current_m = updated_m(output[step]['m'], rate, output[step]['slope'])\n",
     "    return output\n",
