--- a/index.ipynb
+++ b/index.ipynb
@@ -3232,7 +3232,7 @@
     "    output = []\n",
     "    for step in list(range(steps)):\n",
     "        slope = slope_at(x_values, y_values, new_m, b)['slope']\n",
-    "        output.append({'m': new_m, 'rss': residual_sum_squares(x_values, y_values, new_m,b), 'slope':slope})\n",
+    "        output.append({'m': new_m, 'rss': residual_sum_squares(x_values, y_values, current_m,b), 'slope':slope})\n",
     "        current_m = updated_m(output[step]['m'], rate, output[step]['slope'])\n",
     "    return output\n",
     "\n"
