--- a/index.ipynb
+++ b/index.ipynb
@@ -3233,7 +3233,7 @@
     "    for step in list(range(steps)):\n",
     "        slope = slope_at(x_values, y_values, new_m, b)['slope']\n",
     "        output.append({'m': current_m, 'rss': residual_sum_squares(x_values, y_values, current_m,b), 'slope':slope})\n",
-    "        current_m = updated_m(output[step]['m'], rate, output[step]['slope'])\n",
+    "        current_m = updated_m(output[step]['m'], learning_rate, output[step]['slope'])\n",
     "    return output\n",
     "\n"
    ]
